# earthkit

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Makefile  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ci-config.yml  ci-hpc-config.yml
.github/workflows/: cd-pypi.yml  ci.yml  legacy-ci.yml  notify-new-issue.yml  notify-new-pr.yml
docs/: components_overview.rst  conf.py  earthkit-packages.yml  examples.rst  getting-started.rst  index.rst  install.rst  licence.rst  requirements.txt  why.rst
docs/_ext/: xref.py
docs/_static/: custom.css
docs/_templates/furo/sidebar/: brand.html
docs/development/: conda.rst  guidelines.rst  index.rst  setup.rst
docs/examples/: 01_grib_file.ipynb  02_grib_fdb.ipynb  03_polytope_timeseries.ipynb  04_vertical_profile.ipynb  05_polytope_polygon.ipynb  11_integrated_data_climate_maps.ipynb  ensemble.ipynb  index.rst  polytope_polygon.ipynb  polytope_polygon_logo.ipynb  polytope_timeseries.ipynb  polytope_vertical_profile.ipynb
docs/examples/introductory-videos/: 02-installing-earthkit.ipynb  03-accessing-data.ipynb  03-processing-data.ipynb  04-processing-data.ipynb  05-visualising-data.ipynb
docs/tutorials/: 01_grib_file.ipynb  02_grib_fdb.ipynb  comparing-models-solutions.ipynb  ensemble.ipynb  gpu_hydro.ipynb  grid_explorer.ipynb  grid_solutions.ipynb  index.rst  meteo-geo-temporal-analysis-analysis.ipynb  meteo_computations.ipynb  meteo_solutions.ipynb  mps_speedup.ipynb  polytope_polygon.ipynb  polytope_polygon_logo.ipynb  polytope_timeseries.ipynb  polytope_vertical_profile.ipynb  time-series-solutions.ipynb
earthkit/: __init__.py  _climate.py  _inputs_transform.py  cube.py  version.py
earthkit/_inputs_transform/: __main__.py
src/earthkit/: __init__.py
tests/: environment-docs-tests.yml  environment-unit-tests.yml  test_basic.py  test_import.py  test_obj.py  test_version.py
