[build-system]
requires = [ "setuptools>=77", "setuptools-scm[toml]>=8" ]

[project]
name = "earthkit"
description = "Toolkit for earth science workflows"
readme = "README.md"
license = "Apache-2.0"
license-files = [ "LICENSE" ]
authors = [
  { name = "European Centre for Medium-Range Weather Forecasts (ECMWF)", email = "software.support@ecmwf.int" },
]
requires-python = ">=3.10"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Scientific/Engineering",
]
dynamic = [ "version" ]
dependencies = [
  "earthkit-data[all]>=1rc6",
  "earthkit-geo[all]>=1rc7",
  "earthkit-hydro>=1.3rc1",
  "earthkit-meteo>=1rc3",
  "earthkit-plots>=1rc7",
  "earthkit-transforms>=1rc2",
  "earthkit-utils>=1rc1",
]
optional-dependencies.test = [ "pytest", "pytest-forked" ]
urls.Documentation = "https://earthkit.readthedocs.io/"
urls.Homepage = "https://github.com/ecmwf/earthkit/"
urls.Issues = "https://github.com/ecmwf/earthkit.issues"
urls.Repository = "https://github.com/ecmwf/earthkit/"

[tool.setuptools]
packages = [  ]

[tool.setuptools_scm]
version_file = "src/earthkit/_version.py"
local_scheme = "no-local-version"

[tool.isort]
profile = "black"

[tool.coverage.run]
branch = "true"

[tool.pydocstyle]
add_ignore = [ "D1", "D200", "D205", "D400", "D401" ]
convention = "numpy"
