[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8"]

[project]
authors = [
  {name = "European Centre for Medium-Range Weather Forecasts (ECMWF)", email = "software.support@ecmwf.int"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "earthkit-data[all]>=0.20,<0.99",
  "earthkit-geo[all]>=0.5,<0.99",
  "earthkit-hydro<1.3",
  "earthkit-meteo>=0.6.2,<0.99",
  "earthkit-plots>=0.6.1,<0.99",
  "earthkit-regrid>=0.5.0",
  "earthkit-time>=0.1.7",
  "earthkit-transforms>=0.5.4,<0.99",
  "earthkit-utils>=0.1.2,<0.99",
  "earthkit-workflows>=0.4.7,<0.99"
]
description = "Toolkit for earth science workflows"
dynamic = ["version"]
license = {text = "Apache License Version 2.0"}
name = "earthkit"
readme = "README.md"
requires-python = ">=3.9"
optional-dependencies.test = ["pytest", "pytest-forked"]
urls.Documentation = "https://earthkit.readthedocs.io/"
urls.Homepage = "https://github.com/ecmwf/earthkit/"
urls.Issues = "https://github.com/ecmwf/earthkit.issues"
urls.Repository = "https://github.com/ecmwf/earthkit/"

[tool.coverage.run]
branch = "true"

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = ["D1", "D200", "D205", "D400", "D401"]
convention = "numpy"

[tool.setuptools.packages.find]
include = ["earthkit", "earthkit.*"]
where = ["src/"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
version_file = "src/earthkit/_version.py"
