[build-system]
requires = ["setuptools>=77", "setuptools-scm[toml]>=8"]

[project]
authors = [
  {name = "European Centre for Medium-Range Weather Forecasts (ECMWF)", email = "software.support@ecmwf.int"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "earthkit-data[all]~=1.0",
  "earthkit-geo[all]~=1.0",
  "earthkit-hydro~=1.3",
  "earthkit-meteo~=1.0",
  "earthkit-plots~=1.0",
  "earthkit-transforms~=1.0",
  "earthkit-utils~=1.0"
]
description = "Toolkit for earth science workflows"
dynamic = ["version"]
license = "Apache-2.0"
license-files = ["LICENSE"]
name = "earthkit"
readme = "README.md"
requires-python = ">=3.10"
optional-dependencies.test = ["pytest", "pytest-forked"]
urls.Documentation = "https://earthkit.readthedocs.io/"
urls.Homepage = "https://github.com/ecmwf/earthkit/"
urls.Issues = "https://github.com/ecmwf/earthkit.issues"
urls.Repository = "https://github.com/ecmwf/earthkit/"

[tool.coverage.run]
branch = "true"

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = ["D1", "D200", "D205", "D400", "D401"]
convention = "numpy"

[tool.setuptools]
packages = []

[tool.setuptools_scm]
local_scheme = "no-local-version"
version_file = "src/earthkit/_version.py"
