[metadata]
name = earthkit
license = Apache License 2.0
url = https://github.com/ecmwf/earthkit
author = European Centre for Medium-Range Weather Forecasts (ECMWF)
author_email = software.support@ecmwf.int
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
long_description_content_type = text/markdown
long_description = file: README.md
test_suite = tests

[options]
python-requires = >=3.8
packages = find_namespace:
install_requires =
    earthkit-data
    earthkit-maps>=0.0.13
    earthkit-meteo>=0.0.1
    earthkit-plots>=0.0.4

[options.packages.find]
include = earthkit, earthkit.*

[flake8]
max-line-length = 110
extend-ignore = E203, W503

[mypy]
strict = False
ignore_missing_imports = True
